Bug 98800 - MAILMERGE: Wizard: after doing Step#3 with "This document shall.." selected, the next fresh run: Next/Finish are not available
Summary: MAILMERGE: Wizard: after doing Step#3 with "This document shall.." selected, ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.6.2 release
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:6.0.0 target:5.4.0.2
Keywords:
Depends on:
Blocks: Mail-Merge
  Show dependency treegraph
 
Reported: 2016-03-21 13:03 UTC by Cor Nouws
Modified: 2017-06-26 12:18 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2016-03-21 13:03:35 UTC
Make sure the last time the Mail Merge Wizard was used with in Step#3 "This document shall.." selected. (See bug 98799)
Click Next or Finish. Close LibreOffice and Restart.

1. New Writer document
2. Start Tools > Mail Merge Wizard
3. Step #1; take default: Use the current document; Next
4. Step #2; take default: Letter; Next
5. Step #3; Selected is: "This document shall .. "
  > Buttons Next or Finish are not functioning
  > Deselecting "This document shall .. " allows Finish to be used.
    Next (towards step #4) still not available
Comment 1 Cor Nouws 2016-03-22 07:29:26 UTC
well, I did write that I never used the Wizard, did I?

So this behavior exists too in 5.0.5.2, and if I'm not mistaken in 3.6.6.1. It has nothing the do with the current changes.
Comment 2 Buovjaga 2016-03-31 10:35:16 UTC
(In reply to Cor Nouws from comment #0)
> Make sure the last time the Mail Merge Wizard was used with in Step#3 "This
> document shall.." selected. (See bug 98799)

It seems impossible, because I cannot finish with it selected. So what do you mean?
Comment 3 Cor Nouws 2016-03-31 11:02:36 UTC
(In reply to Buovjaga from comment #2)
> (In reply to Cor Nouws from comment #0)
> > Make sure the last time the Mail Merge Wizard was used with in Step#3 "This
> > document shall.." selected. (See bug 98799)
> 
> It seems impossible, because I cannot finish with it selected. So what do
> you mean?

This bug only appears if you used the Wizard in a certain way the previous time.
And since you in your test cannot Finish, you are in the situation that is needed to see the bug.
It is a bit tricky ;)
Comment 4 Cor Nouws 2016-03-31 11:02:59 UTC
btw Buovjaga: thanks for your testing :)
Comment 5 Buovjaga 2016-04-01 05:27:02 UTC
(In reply to Cor Nouws from comment #3)
> And since you in your test cannot Finish, you are in the situation that is
> needed to see the bug.

I guess you mean I am "NOT in the situation that is needed to see the bug".
Comment 6 tommy27 2016-05-29 06:29:05 UTC
@Cor 
is this issue still present in 5.1.x or 5.2.x?
Comment 7 Cor Nouws 2016-05-29 09:42:24 UTC
(In reply to tommy27 from comment #6)
> @Cor 
> is this issue still present in 5.1.x or 5.2.x?

In daily20160525 even worse: in step 5 (Step #3 in Wizard) Next / Finish are not active, whatever one does with "This document shall.."
Comment 8 Gabor Kelemen (Collabora) 2017-06-07 22:08:38 UTC
I can confirm this.

After enabling "This document shall..." square the state of the Next button depends on whether the field matching is done with the Match Fields button. 
You might also disable the square to continue.

The state of the "This document shall..." square (among a lot of MM Wizard settings) is saved in the user level configuration, so it is loaded at the next LO run, this might rearrange some things.

If this square is enabled, then you cancel the wizard before the field matching is done and restart LO, the Next button is always disabled at the next LO run. Even disabling the "This document shall..." square does not help. This is different from the case of the first run.

However if you do the field matching at this point, the Next button gets enabled and you can continue.
Comment 9 Commit Notification 2017-06-24 07:41:05 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=511c16bd8c8671f43d2ff93f845209e733c6ae4d

tdf#98800 Enable Next button on the third page of the MM Wizard

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2017-06-26 12:09:46 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=68d7d974867d226aaf691f6609651fdcd30b7d36&h=libreoffice-5-4

tdf#98800 Enable Next button on the third page of the MM Wizard

It will be available in 5.4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.