tdf#98800 Enable Next button on the third page of the MM Wizard

This seems to enable and disable the Next button even if the
'This page shall' checkbox is already enabled after a previous run.

Change-Id: I9cba7649b9cd1df110c5a120d4eea3d97b3afcf1